src/App.css
@import url('https://fonts.googleapis.com/css2?family=Manrope:wght@200;300;400;500;600;700;800&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap');

@media only screen and (max-width: 1130px) {
  .rentals-content-container {
    padding: 0 40px !important;
  }
}

@media only screen and (max-width: 800px) {
  .nav-container {
      display: none !important;
  }

  .nav-mobile-container {
    display: flex !important;
  }
}

html {
  margin-right: calc(-1 * (100vw - 100%)); /* Prevents page from adjusting when scrollbar is present or not */
  overflow-x: hidden;
}

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

body {
  font-family: 'Inter', sans-serif;
  color: rgb(34, 34, 34);
  font-weight: 400;
  font-size: 16px;
}

.app-container {
  display: flex;
  flex-direction: column;
  width: 100%;
  height: 100%;
}

.app-container > div {
  flex: 1;
}

.nav-container {
  display: flex;
  flex-direction: column;
  border-bottom: 2px solid rgba(211, 211, 211, .25);
  align-items: center;
}

.nav-mobile-container {
  display: none;
  flex-direction: row;
  align-items: center;
  justify-content: space-between;
  width: 100%;
  min-height: 65px;
  padding: 0 28px;
}

.main-content-container {
  display: flex;
  flex-direction: row;
  justify-content: center;
  width: 100%;
}

.rentals-content-container {
  display: flex;
  flex-direction: column;
  width: 100%;
  max-width: 1280px;
  height: 100%;
  padding: 0 80px;
  margin: 0 auto;
}

.rentals-container {
  display: flex;
  flex-direction: column;
  width: 100%;
  min-height: 300px;
  text-align: center;
  border-bottom: 1px solid rgba(221, 221, 221, .7);
}

.reviews-container{
  display: flex;
  flex-direction: column;
  width: 100%;
  text-align: center;
  border-bottom: 1px solid rgba(221, 221, 221, .7);
}

.location-container {
  display: flex;
  flex-direction: column;
  width: 100%;
  text-align: center;
  border-bottom: 1px solid rgba(221, 221, 221, .7);
}

.host-container {
  display: flex;
  flex-direction: column;
  width: 100%;
  text-align: center;
}

.footer-container {
  display: flex;
  flex-direction: column;
  align-items: center;
  border-top: 1px solid rgba(221, 221, 221, .7);
  background-color: #f7f7f7;
}

